text reveal animation, and fixing gap on homepage

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.container-scroll {
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  height: 100vh;
-}
